--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -14,6 +14,7 @@ $inactiveInputBg: #F1F0EF;
 $sectionDarkBg: #F1F0EF;
 $sectionLightBg: #F9F9F8;
 $footerBg: #1E1E1E;
+$activeBg: #FF9C54;
 
 $lightBtnBg: #D9F2ED;
 $seclightBtnBg: #F9FAFA;
