--- a/sass/components/_advantage.scss
+++ b/sass/components/_advantage.scss
@@ -41,3 +41,17 @@
     color: $secondaryTxt;
 }
 
+.advantage__pagination{
+    text-align: center;
+    margin-top: 30px;
+
+    & .swiper-pagination-bullet{
+        height: 17px;
+        width: 17px;
+        background-color: $accentDarkBg;
+        opacity: 1;
+    }
+    & .swiper-pagination-bullet-active{
+        background-color: $activeBg;
+    }
+}
