--- a/css/index.css
+++ b/css/index.css
@@ -859,7 +859,7 @@ button {
 }
 .rating::before {
   content: "";
-  background-image: url(../../img/star.svg);
+  background-image: url(../img/star.svg);
   width: 100%;
   height: 100%;
   background-size: auto 100%;
@@ -870,7 +870,7 @@ button {
 }
 .rating::after {
   content: "";
-  background-image: url(../../img/star-active.svg);
+  background-image: url(../img/star-active.svg);
   width: 80%;
   height: 100%;
   background-size: auto 100%;
