--- a/sass/modules/_rating.scss
+++ b/sass/modules/_rating.scss
@@ -6,7 +6,7 @@
 
     &::before {
         content: '';
-        background-image: url(../../img/star.svg);
+        background-image: url(../img/star.svg);
         width: 100%;
         height: 100%;
         background-size: auto 100%;
@@ -18,7 +18,7 @@
 
     &::after {
         content: '';
-        background-image: url(../../img/star-active.svg);
+        background-image: url(../img/star-active.svg);
 
         width: 80%;
         height: 100%;
