add part product

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,7 @@
 $primaryTxt: #333333;
 $primaryLightTxt: #ffffff;
 $primaryLightHoverTxt: #f1f0ef;
+$darkTxt: #000000;
 $secondaryTxt: #5A6765;
 $accentDarkTxt: #05AA82;
 $attentionTxt: #FF5454;
@@ -26,12 +27,14 @@ $primaryIco: #ffffff;
 $accentDarkIco: #05AA82;
 $hoverIco: #FF6954;
 $secondaryIco: #5A6765;
+$darkIco: #333333;
 
 
 $placeholderTxt: #5A6765;
 $darkBord: #5A6765;
 $lightBord: #D9D9D9;
 $accentBord: #05AA82;
+$formBord: #DCE2E1;
 
 
 
