--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -55,7 +55,12 @@ button {
     }
 }
 
-
+.img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
 .container {
     padding-left: 20px;
     padding-right: 20px;
