--- a/sass/components/_breadcrumbs.scss
+++ b/sass/components/_breadcrumbs.scss
@@ -33,7 +33,7 @@
     overflow-x: auto;
     width: 100%;
     padding-bottom: 10px;
-    cursor: pointer;
+    // cursor: pointer;
     
 
     &::-webkit-scrollbar {
