--- a/css/categories.css
+++ b/css/categories.css
@@ -1571,6 +1571,10 @@ button {
   border-radius: 15px;
 }
 
+.categories__image {
+  position: relative;
+}
+
 @media screen and (min-width: 768px) {
   .advantage {
     display: -webkit-box;
