--- a/sass/components/_categories.scss
+++ b/sass/components/_categories.scss
@@ -20,5 +20,7 @@
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.05);
     border-radius: 15px;
 }
-.categories__image{}
+.categories__image{
+    position: relative;
+}
 .categories__name{}
