--- a/sass/categories.scss
+++ b/sass/categories.scss
@@ -17,5 +17,7 @@
 @import './components/header';
 @import './components/breadcrumbs';
 @import './components/categories';
+@import './components/main_about';
+@import './components/main_products';
 @import './components/advantage';
 @import './components/footer';
