--- a/css/index.css
+++ b/css/index.css
@@ -267,8 +267,14 @@ button {
 
 .section__title_page {
   font-weight: 600;
-  font-size: 36px;
-  margin-bottom: 30px;
+  font-size: 26px;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 1260px) {
+  .section__title_page {
+    font-size: 36px;
+    margin-bottom: 30px;
+  }
 }
 
 .section__nav {
@@ -407,6 +413,7 @@ button {
   padding: 13px;
 }
 .product_short--full:hover {
+  z-index: 1;
   -webkit-filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.1));
           filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.1));
 }
@@ -1593,24 +1600,24 @@ button {
 
 .promo__btn {
   padding: 9px 30px;
-  background: #D9F2ED;
+  background-color: #D9F2ED;
   border-radius: 30px;
   font-weight: 500;
   color: #05AA82;
-  -webkit-transition: background 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95), color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
-  -o-transition: background 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95), color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
-  transition: background 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95), color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  -webkit-transition: background-color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95), color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  -o-transition: background-color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95), color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  transition: background-color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95), color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
 }
 .promo__btn:hover, .promo__btn:focus {
   background: #05AA82;
   color: #ffffff;
 }
 
-.promo__slider {
+.promo_slider {
   display: none;
 }
 @media screen and (min-width: 1260px) {
-  .promo__slider {
+  .promo_slider {
     display: block;
     max-width: calc(75% - 5px);
     width: 100%;
@@ -1619,6 +1626,88 @@ button {
     overflow: hidden;
     margin-left: 10px;
   }
+}
+
+.promo_slider__slide {
+  position: relative;
+}
+
+.promo_slider__img {
+  position: relative;
+  width: 100%;
+  height: 464px;
+  overflow: hidden;
+}
+
+.promo_slider__box {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 45%;
+}
+
+.promo_slider__title {
+  color: #ffffff;
+  font-size: 35px;
+}
+
+.promo_slider__btn {
+  margin-top: 20px;
+  padding: 15px 20px;
+  background: #05AA82;
+  -webkit-box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
+  color: #ffffff;
+  font-weight: 700;
+  -webkit-transition: background-color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  -o-transition: background-color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  transition: background-color 250ms cubic-bezier(0.45, 0.05, 0.55, 0.95);
+}
+.promo_slider__btn:hover, .promo_slider__btn:focus {
+  background-color: #059975;
+}
+
+.promo_slider__icon {
+  width: 21px;
+  height: 12px;
+  fill: #ffffff;
+}
+
+.promo_slider__pagination_wrap {
+  position: absolute;
+  right: 30px;
+  bottom: 35px;
+  z-index: 2;
+}
+
+.promo_slider__pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 7px;
+  background: rgba(252, 249, 243, 0.4);
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+  border-radius: 30px;
+}
+.promo_slider__pagination .swiper-pagination-bullet {
+  height: 17px;
+  width: 17px;
+  background-color: #05AA82;
+  opacity: 1;
+}
+.promo_slider__pagination .swiper-pagination-bullet-active {
+  background-color: #FF9C54;
+}
+.promo_slider__pagination.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 7px 0 0;
+}
+.promo_slider__pagination.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet:last-child {
+  margin: 0;
 }
 
 .main_products {
@@ -2021,7 +2110,7 @@ button {
 
 .advantage__pagination {
   text-align: center;
-  margin-top: 30px;
+  margin-top: 15px;
 }
 .advantage__pagination .swiper-pagination-bullet {
   height: 17px;
@@ -2046,6 +2135,18 @@ button {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media screen and (min-width: 1260px) {
+  .footer__wrap {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -2057,6 +2158,16 @@ button {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .footer__side_left {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1260px) {
+  .footer__side_left {
+    margin-bottom: 0;
+  }
 }
 
 .footer__logo {
@@ -2078,7 +2189,7 @@ button {
 .footer__social_box {
   margin-top: 30px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1260px) {
   .footer__social_box {
     margin-top: 30%;
   }
@@ -2099,11 +2210,15 @@ button {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 60%;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-top: 15px;
+  }
+}
+@media screen and (min-width: 1260px) {
+  .footer__side_right {
+    width: 60%;
   }
 }
 
