--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,11 +6,24 @@
     @include tab{
         display: flex;
         justify-content: space-between;
+        flex-direction: column;
+    }
+    @include desk {
+        flex-direction: row;
     }
 }
 .footer__side_left{
     display: flex;
     flex-direction: column;
+
+    @include tab {
+        margin-bottom: 20px;
+    }
+
+    @include desk {
+        margin-bottom: 0;
+    }
+    
 }
 .footer__logo{
     margin-bottom: 15px;
@@ -29,7 +42,7 @@
     
     margin-top: 30px;
 
-    @include tab{
+    @include desk{
         margin-top: 30%;
     }
 }
@@ -47,11 +60,14 @@
     margin-top: 30px;
 
     @include tab {
-            display: flex;
-            width: 60%;
-            justify-content: space-between;
-            margin-top: 15px;
-        }
+        display: flex;
+        justify-content: space-between;
+        margin-top: 15px;
+    }
+
+    @include desk {
+        width: 60%;
+    }
 }
 .footer__box{
     margin-bottom: 30px;
