--- a/sass/components/_promo.scss
+++ b/sass/components/_promo.scss
@@ -75,11 +75,11 @@
 }
 .promo__btn{
     padding: 9px 30px;
-    background: $lightBtnBg;
+    background-color: $lightBtnBg;
     border-radius: 30px;
     font-weight: 500;
     color: $accentDarkTxt;
-    transition: background 250ms $trans, color 250ms $trans;
+    transition: background-color 250ms $trans, color 250ms $trans;
 
     &:hover,&:focus{
       background: $darkBtnBg;
@@ -87,7 +87,7 @@
     }
 }
 
-.promo__slider {
+.promo_slider {
     display: none;
 
     @include desk{
@@ -98,5 +98,78 @@
         border-radius: 25px;
         overflow: hidden;
         margin-left: 10px;
+    }
+}
+
+.promo_slider__slide{
+    position: relative;
+}
+.promo_slider__img{
+    position: relative;
+    width: 100%;
+    height: 464px;
+    overflow: hidden;
+}
+.promo_slider__box{
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translateY(-50%);
+    width: 45%;
+}
+.promo_slider__title{
+    color: $primaryLightTxt;
+    font-size: 35px;
+}
+
+.promo_slider__btn{
+    margin-top: 20px;
+    padding: 15px 20px;
+    background: $darkBtnBg;
+    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+    color: $primaryLightTxt;
+    font-weight: 700;
+    transition: background-color 250ms $trans;
+
+    &:hover, &:focus{
+        background-color: $darkHoverBtnBg;
+    }
+}
+
+.promo_slider__icon{
+    width: 21px;
+    height: 12px;
+    fill: $primaryIco;
+}
+.promo_slider__pagination_wrap{
+    position: absolute;
+    right: 30px;
+    bottom: 35px;
+    z-index: 2;
+}
+.promo_slider__pagination{
+    display: flex;
+    padding: 7px;
+    background: rgba(252, 249, 243, 0.4);
+    backdrop-filter: blur(15px);   
+    border-radius: 30px;
+
+    & .swiper-pagination-bullet{  
+        height: 17px;
+        width: 17px;
+        background-color: $accentDarkBg; 
+        opacity: 1;
+    }
+    & .swiper-pagination-bullet-active{  
+        background-color: $activeBg; 
+    }
+
+    &.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet{
+        margin: 0 7px 0 0;
+
+        &:last-child {
+            margin: 0;
+        }
     }
 }
