--- a/sass/modules/_section.scss
+++ b/sass/modules/_section.scss
@@ -41,8 +41,13 @@
 }
  .section__title_page {
      font-weight: 600;
-     font-size: 36px;
-     margin-bottom: 30px;
+     font-size: 26px;
+     margin-bottom: 15px;
+
+    @include desk {
+        font-size: 36px;
+        margin-bottom: 30px;
+    }
  }
 .section__nav{
     display: flex;
